flex-wrap fixed// problems sizing font awesome

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ height: 100vh;
 }
 #display{
     height: 70vh;
-    border-bottom: 2px solid white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,6 +28,7 @@ height: 100vh;
     font-weight: bold;
     text-align: center;
     text-shadow: 0px 5px 10px rgba(6, 0, 58, 0.5);
+    margin: 0;
 }
 
 #controls {
@@ -37,9 +37,24 @@ height: 100vh;
 }
 
 .control{
-    border: 1px solid white;
-    border-top:none;
+    border-top:1px solid white;
     width: 50%;
     height: 15vh;
     width: 50vw;
+}
+
+.flex-control{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.fa{
+    color:white;
+    font-size: 40px;
+}
+
+.time-setter{
+    font-weight: bold;
+    font-size: 3rem;
+    margin: 0 2rem;
 }
